Fix button alignement

--- a/ressources/css/resets/_forms.scss
+++ b/ressources/css/resets/_forms.scss
@@ -34,6 +34,7 @@ select {
 button {
   padding: 0;
   overflow: visible; /* IE 8/9/10/11 overflow hidden */
+  text-align: inherit;
 }
 
 button,
